# deal

./: .ocamlformat  README.md  deal.opam  dune-project
lib/: card.ml  color.ml  deck.ml  dune  game.ml  player.ml
test/: dune
